--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
 # So this option has been renamed in version 2.1 (18 October 2015)
 # http://stackoverflow.com/questions/11832199/tmux-set-g-mouse-mode-on-doesnt-work
 set -g mouse on
+
+# Cleaner look by hiding the status bar
+set -g status off
