--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,5 +2,5 @@
 # http://stackoverflow.com/questions/11832199/tmux-set-g-mouse-mode-on-doesnt-work
 set -g mouse on
 
-# Cleaner look by hiding the status bar
-set -g status off
+# Cleaner look by setting at the top for VSCode
+set-option -g status-position top
