replaced config with link to it

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,23 +1,1 @@
-[alias]
-	cm = commit
-	co = checkout
-[user]
-	email = theliketurbo@gmail.com
-	name = Ramzan Chasygov
-[core]
-	editor = vim
-[color]
-	  ui = auto
-[color "branch"]
-	  current = yellow reverse
-	    local = yellow
-	      remote = green
-[color "diff"]
-	  meta = yellow bold
-	    frag = magenta bold
-	      old = red bold
-	        new = green bold
-[color "status"]
-	  added = yellow
-	    changed = green
-	      untracked = cyan
+/c/Users/Ramzan/.gitconfig
